# Sweetshark-client

./: .gitignore  QUICK_START.md  README.md  index.html  main.js  package.json  preload.js  start.bat  start.sh  view-preload.js
renderer/: index.html  script.js  styles.css
sidecar/: Cargo.toml
sidecar/src/: main.rs
