[package]
name = "sweetshark-capture"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
bytemuck = "1.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
